syntax = "proto3";

package com.techbellys.messaging;

option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

// Message request definition
message MessageRequest {
  Person sender = 1;
  string content = 2;
  google.protobuf.Timestamp send_time = 3;
}

// Message response definition
message MessageResponse {
  string recipient = 1;
  string content = 2;
  google.protobuf.Timestamp read_time = 3;
}

// Response for client-streaming service
message GroupedMessagesResponse {
  repeated SenderMessagesPair sender_messages = 1;
}

// Pair of sender and messages
message SenderMessagesPair {
  Person sender = 1;
  repeated string messages = 2;
}

message RecipientsRequest {
  repeated Person recipients = 1;
}

message Person {
  string name = 1;
  optional int32 age = 2;
  optional Gender gender = 3;
}

enum Gender {
  MALE = 0;
  FEMALE = 1;
}

// Messaging service definition
service MessagingService {

  // synchronous method (unary): client sends a message and waits for a response
  rpc sendMessage(MessageRequest) returns (MessageResponse);

  // asynchronous method (client-streaming method): client sends multiple messages and receives a combined response
  rpc collectMessagesBySender(stream MessageRequest) returns (GroupedMessagesResponse);

  // asynchronous method (server-streaming method): client sends a message and receives multiple responses
  rpc sendMessageToAll(RecipientsRequest) returns (stream MessageResponse);

  // asynchronous method (bi-directional): client sends a stream of messages and receives a stream of responses
  rpc sendMessageStream(stream MessageRequest) returns (stream MessageResponse);
}